force-app/main/default/objects/Animal360_Species_Template__mdt/Animal360_Species_Template__mdt.object-meta.xml
<CustomObject>
    <description
  >Maps species and assessment context to a packaged template key.</description>
    <label>Animal360 Species Template</label>
    <pluralLabel>Animal360 Species Templates</pluralLabel>
</CustomObject>