force-app/main/default/objects/Animal360_Species_Template__mdt/fields/Assessment_Context__c.field-meta.xml
<CustomField>
    <fullName>Assessment_Context__c</fullName>
    <description>Assessment context used for template resolution.</description>
    <label>Assessment Context</label>
    <length>80</length>
    <type>Text</type>
</CustomField>