force-app/main/default/objects/Animal360_Species_Template__mdt/fields/Is_Default__c.field-meta.xml
<CustomField>
    <fullName>Is_Default__c</fullName>
    <description
  >Marks the packaged default mapping for the species and context.</description>
    <label>Is Default</label>
    <defaultValue>true</defaultValue>
    <type>Checkbox</type>
</CustomField>