force-app/main/default/objects/Animal360_Species_Template__mdt/fields/Species__c.field-meta.xml
<CustomField>
    <fullName>Species__c</fullName>
    <description
  >Species label used for runtime template resolution.</description>
    <label>Species</label>
    <length>80</length>
    <type>Text</type>
</CustomField>