force-app/main/default/objects/Animal360_Species_Template__mdt/fields/Template_Key__c.field-meta.xml
<CustomField>
    <fullName>Template_Key__c</fullName>
    <description
  >Stable template key that resolves to a packaged template definition.</description>
    <label>Template Key</label>
    <length>100</length>
    <type>Text</type>
</CustomField>